<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="complexprogrammer.uz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_news"
        android:name="complexprogrammer.uz.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_tic_tac_toe"
        android:name="complexprogrammer.uz.ui.online_games.TicTacToeFragment"
        android:label="@string/menu_tic_tac_toe"
        tools:layout="@layout/fragment_tic_tac_toe" />
    <fragment
        android:id="@+id/nav_guid"
        android:name="complexprogrammer.uz.ui.services.GuidFragment"
        android:label="@string/menu_guid"
        tools:layout="@layout/fragment_guid" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="complexprogrammer.uz.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="complexprogrammer.uz.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>