<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/item3"
            android:title="Item 3"
            >
            <menu>
                <item
                    android:id="@+id/subitem1"
                    android:title="Sub Item 1" />
                <item
                    android:id="@+id/subitem2"
                    android:title="Sub Item 2" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_tic_tac_toe"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_tic_tac_toe" />
        <item
            android:id="@+id/nav_guid"
            android:icon="@drawable/ic_baseline_widgets_24"
            android:title="@string/menu_guid" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

</menu>
